Assignment 3 w correct solution

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.benfro</groupId>
-    <artifactId>mvn-template</artifactId>
+    <artifactId>project-reactor-course</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <name>mvn-template</name>
